compiler/tests/invalid_programs/syntax/invalid_method_signature2.jm
#!SyntaxError

def foo(bar:Int"bar")
end
